NON-COMPLIANCE wfnews-442, wfnews-427

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -11,7 +11,7 @@
     <h1>LEGEND & DEFINITIONS</h1>
     <article>
         <p class="paragraph-format">
-            The BC Wildfire Service uses stages of control to report on progress.
+            The BC Wildfire Service uses stages of control to report on wildfire progress.
         </p>
     </article>
     <article>
@@ -60,7 +60,7 @@
     <h1>MORE INFORMATION</h1>
     <article>
         <p>
-            <a href="">Wildfires Stages of Control</a>
+            <a href="">Wildfire Stages of Control</a>
         </p>
         <p>
             <a href="">Plan, Prepare, Stay Informed</a>
