--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -1,3 +1,4 @@
+<div class="panel-header">Wildfire Stages of Control</div>
 <div class="header">
     <span class="count">23 results</span>
     <span class="show-toggle">
