--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -36,6 +36,10 @@
             &.smk-tool-BaseMapsTool::after {
                 content: 'Base Map'
             }
+
+            &.smk-tool-BespokeTool--show-list::after {
+                content: 'Show List'
+            }
         }
     }
 
