--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -534,3 +534,13 @@ iframe#login-iframe {
         min-height: $wf1-app-map-mobile-height;
     }
 }
+
+.details {
+    transition: all .2s linear;
+    width: 600px;
+}
+
+.details.close {
+    width: 0px;
+    min-width: 0px!important;
+}
