Hide button labels on small screens

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -174,3 +174,9 @@ mat-panel-title {
   margin-bottom: 10px;
   background-color: #f1f1f3;
 }
+
+@media screen and (max-width: 768px) {
+  .hide {
+      display: none !important;
+  }
+}
