change label as requested

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -21,7 +21,7 @@
             <div class="my-location-button">
                 <button mat-raised-button (click)="useMyCurrentLocation()">
                     <mat-icon class="location-icon">my_location</mat-icon>
-                    Use My Location
+                    Find My Location
                 </button>
             </div>
             <div class="firecentre-filter">
