--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -38,7 +38,7 @@
             }
 
             &.smk-tool-BespokeTool--show-list::after {
-                content: 'Show List'
+                content: ''
             }
         }
     }
