--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -27,7 +27,7 @@
         </p>
     </article>
     <article>
-        <h2 class="orange">New Incidents</h2>
+        <h2 class="orange">New</h2>
         <p class="paragraph-format">
             A new wildfire that has been posted within the last 24 hours.
         </p>
