hyperlink should open in new tab

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-area-restrictions/panel-area-restrictions.component.html
@@ -24,8 +24,8 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions">Current Restrictions</a></p>
-        <p><a href="http://www.sitesandtrailsbc.ca/closures.aspx">Recreation Sites and Trails Closures</a></p>
-        <p><a href="https://bcparks.ca/wildfire/">BC Parks Closures</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions" target="_blank">Current Restrictions</a></p>
+        <p><a href="http://www.sitesandtrailsbc.ca/closures.aspx" target="_blank">Recreation Sites and Trails Closures</a></p>
+        <p><a href="https://bcparks.ca/wildfire/" target="_blank">BC Parks Closures</a></p>
     </article>
 </section>
