--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -22,10 +22,10 @@
     <h1>MORE INFORMATION</h1>
     <article>
         <p>
-            <a href="https://www.emergencyinfobc.gov.bc.ca/">Current Evacuation Advisories</a>
+            <a href="https://www.emergencyinfobc.gov.bc.ca/" target="_blank">Current Evacuation Advisories</a>
         </p>
         <p>
-            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance">Evacuee Guidance</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank">Evacuee Guidance</a>
         </p>
         <p>
             <a href="">List of Local Authorities</a>
