--- a/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
@@ -34,8 +34,8 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/environment/air-land-water/air/air-quality/aqhi">BC Air Quality Health Index</a></p>
-        <p><a href="https://firesmoke.ca/forecasts/ ">Smoke Forecast Map</a></p>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/air-quality">Wildfires and Air Quality</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/environment/air-land-water/air/air-quality/aqhi" target="_blank">BC Air Quality Health Index</a></p>
+        <p><a href="https://firesmoke.ca/forecasts/ " target="_blank">Smoke Forecast Map</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/air-quality" target="_blank">Wildfires and Air Quality</a></p>
     </article>
 </section>
