styling change WFNEWS-276

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -28,13 +28,11 @@
             <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank">Evacuee Guidance</a>
         </p>
         <p>
-            <a href="">List of Local Authorities</a>
+            <a href="https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems " target="_blank">Local Government System in B.C</a>
         </p>
         <p>
-            <a href="">Forest Resource Road Closures</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts " target="_blank">B.C. Emergency Alerts</a>
         </p>
-        <p>
-            <a href="">Broadcast Instrusive Alerts</a>
-        </p>
+
     </article>
 </section>
