--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -203,7 +203,7 @@ mat-panel-title {
   font-size: 15px;
   font-weight: 700;
   color: #1c5a97;
-  padding: 10px;
+  padding: 10px 20px;
   margin-bottom: 10px;
   background-color: #f1f1f3;
 }
