--- a/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.scss
@@ -17,10 +17,11 @@ section {
 
     h1 {
         background-color: #e9eff5;
-        font-size: 15px;
+        font-size: 13px;
         font-weight: normal;
         padding: 10px 20px;
         margin: 0;
+        letter-spacing: 2px;
     }
 
     h3 {
@@ -32,6 +33,18 @@ section {
     article {
         font-size: 15px;
         padding: 10px 20px;
+
+        a:link {
+          color: #1A5A96
+        }
+
+        a:visited{
+            color: #1A5A96
+        }
+
+        a:hover{
+            text-decoration: none;
+        }
 
         h2 {
             font-size: 15px;
