--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -61,10 +61,10 @@
     <h1>MORE INFORMATION</h1>
     <article>
         <p>
-            <a href="">Wildfire Stages of Control</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/management-strategies/stages-of-control" target="_blank">Wildfire Stages of Control</a>
         </p>
         <p>
-            <a href="">Plan, Prepare, Stay Informed</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response/plan-prepare-stay-informed" target="_blank">Plan, Prepare, Stay Informed</a>
         </p>
     </article>
 </section>
