--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.scss
@@ -36,7 +36,7 @@ section {
                 color: #9A6400 ;
 
                 &::before {
-                    background-color: #9A6400 
+                    background-color: #ef9c00
                 }
             }
 
