Ability to search by location

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -11,12 +11,23 @@
 
         <div class="search-row">
             <div class="search-bar">
-                <input class="search-input" aria-label="Search" [(ngModel)]="searchText" (ngModelChange)="searchTextUpdated()" placeholder="Search by Location">
-                <button mat-button matSuffix mat-icon-button class="input-clear-button" *ngIf="searchText"
-                        aria-label="Clear" (click)="searchText=undefined;searchTextUpdated(); $event.stopPropagation()"
-                        matTooltip="Clear">
-                    <mat-icon>close</mat-icon>
-                </button>
+                <input type="text" placeholder="Search by Location" aria-label="Search" matInput
+                    [formControl]="searchByLocationControl" [matAutocomplete]="auto" class="search-location">
+                <div class="search-location-close-container">
+                    <mat-icon class="search-location-search">search</mat-icon>
+                    <mat-icon class="search-location-close" (click)="clearSearchLocationControl()">close</mat-icon>
+                </div>
+
+                <mat-autocomplete class="location-results" #auto="matAutocomplete" (optionSelected)="onLocationSelected($event.option.value)">
+                    <mat-option class="location-mat-option" *ngFor="let option of filteredOptions"
+                        [value]="option">
+                        <div class="location-option">
+                            <mat-icon>place</mat-icon><span
+                                class="address">{{option.name.split(',')[0]}}</span>&nbsp;<span>{{option.name.split(',')[1]}},
+                            </span>&nbsp;<span>{{option.name.split(',')[2]}}</span>
+                        </div>
+                    </mat-option>
+                </mat-autocomplete>
             </div>
             <div class="my-location-button">
                 <button mat-raised-button (click)="useMyCurrentLocation()">
@@ -32,66 +43,49 @@
     </div>
 
     <div class="map-layers">
-      <div class="item"
-            [class.active]="selectedLayer === 'wildfire-stage-of-control'"
-            (click)="onSelectLayer( 'wildfire-stage-of-control' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'wildfire-stage-of-control'"
+            (click)="onSelectLayer( 'wildfire-stage-of-control' )">
             <wf-icon class="icon" iconName="local_fire_department" iconSize="small"></wf-icon>
             <span class="hide">Incidents</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'evacuation-orders-and-alerts'"
-            (click)="onSelectLayer( 'evacuation-orders-and-alerts' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'evacuation-orders-and-alerts'"
+            (click)="onSelectLayer( 'evacuation-orders-and-alerts' )">
             <wf-icon class="icon" iconName="error" iconSize="small"></wf-icon>
             <span class="hide">Evacuation Orders and Alerts</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'area-restrictions'"
-            (click)="onSelectLayer( 'area-restrictions' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'area-restrictions'"
+            (click)="onSelectLayer( 'area-restrictions' )">
             <wf-icon class="icon" iconName="wf/map-signs" iconSize="small"></wf-icon>
             <span class="hide">Area Restrictions</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'bans-and-prohibitions'"
-            (click)="onSelectLayer( 'bans-and-prohibitions' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'bans-and-prohibitions'"
+            (click)="onSelectLayer( 'bans-and-prohibitions' )">
             <wf-icon class="icon" iconName="block" iconSize="small"></wf-icon>
             <span class="hide">Bans and Prohibitions</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'smoke-forecast'"
-            (click)="onSelectLayer( 'smoke-forecast' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'smoke-forecast'"
+            (click)="onSelectLayer( 'smoke-forecast' )">
             <wf-icon class="icon" iconName="air" iconSize="small"></wf-icon>
             <span class="hide">Smoke Forecast</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'fire-danger'"
-            (click)="onSelectLayer( 'fire-danger' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'fire-danger'" (click)="onSelectLayer( 'fire-danger' )">
             <wf-icon class="icon" iconName="format_list_numbered" iconSize="small"></wf-icon>
             <span class="hide">Danger Rating</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'local-authorities'"
-            (click)="onSelectLayer( 'local-authorities' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'local-authorities'"
+            (click)="onSelectLayer( 'local-authorities' )">
             <wf-icon class="icon" iconName="place" iconSize="small"></wf-icon>
             <span class="hide">Local Authorities</span>
         </div>
 
-        <div class="item"
-            [class.active]="selectedLayer === 'routes-impacted'"
-            (click)="onSelectLayer( 'routes-impacted' )"
-        >
+        <div class="item" [class.active]="selectedLayer === 'routes-impacted'"
+            (click)="onSelectLayer( 'routes-impacted' )">
             <wf-icon class="icon" iconName="directions_car_filled" iconSize="small"></wf-icon>
             <span class="hide">Road Conditions</span>
         </div>
@@ -100,19 +94,20 @@
 
 <div class="bottom">
     <div [ngClass]="showAccordion ? 'details' : 'details close'">
-      <panel-wildfire-stage-of-control *ngIf="selectedPanel === 'wildfire-stage-of-control' && showAccordion" ></panel-wildfire-stage-of-control>
-      <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts' && showAccordion"></panel-evacuation-orders-and-alerts>
-      <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions' && showAccordion"></panel-area-restrictions>
-      <panel-bans-prohibitions *ngIf="selectedPanel === 'bans-and-prohibitions' && showAccordion"></panel-bans-prohibitions>
-      <panel-smoke-forecast *ngIf="selectedPanel === 'smoke-forecast' && showAccordion"></panel-smoke-forecast>
-      <panel-fire-danger *ngIf="selectedPanel === 'fire-danger' && showAccordion"></panel-fire-danger>
+        <panel-wildfire-stage-of-control *ngIf="selectedPanel === 'wildfire-stage-of-control' && showAccordion">
+        </panel-wildfire-stage-of-control>
+        <panel-evacuation-orders-and-alerts *ngIf="selectedPanel === 'evacuation-orders-and-alerts' && showAccordion">
+        </panel-evacuation-orders-and-alerts>
+        <panel-area-restrictions *ngIf="selectedPanel === 'area-restrictions' && showAccordion">
+        </panel-area-restrictions>
+        <panel-bans-prohibitions *ngIf="selectedPanel === 'bans-and-prohibitions' && showAccordion">
+        </panel-bans-prohibitions>
+        <panel-smoke-forecast *ngIf="selectedPanel === 'smoke-forecast' && showAccordion"></panel-smoke-forecast>
+        <panel-fire-danger *ngIf="selectedPanel === 'fire-danger' && showAccordion"></panel-fire-danger>
     </div>
 
     <div class="map">
-        <wf-map-container
-            [mapConfig]="mapConfig"
-            (mapInitialized)="initMap($event)"
-            (toggleAccordion)="onToggleAccordion()"
-        ></wf-map-container>
+        <wf-map-container [mapConfig]="mapConfig" (mapInitialized)="initMap($event)"
+            (toggleAccordion)="onToggleAccordion()"></wf-map-container>
     </div>
 </div>
