--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -27,8 +27,9 @@
         padding-right: 17rem;
 
         .search-bar{
-          padding: 0 5px;
+          padding: 0 30px;
           display: flex;
+          align-items: center;
 
           .input-clear-button{
             position: absolute;
