--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -544,3 +544,66 @@ iframe#login-iframe {
     width: 0px;
     min-width: 0px!important;
 }
+
+.location-results{
+    position: absolute!important;
+    width: auto!important;
+    top: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 11px 4px #00000033!important;
+    max-height: none!important;
+}
+
+.location-mat-option  {
+    line-height: 2.5 !important;
+    height: auto!important;
+}
+
+.location-option {
+    font-size: 14px;
+    line-height: 2.3;
+    display: flex;
+    align-items: center;
+}
+.location-option .mat-icon{
+    color: #9e9e9e;
+    font-size: 14px;
+    margin-right: 10px!important;
+    height: 14px;
+    width: 14px;
+}
+.location-option .address{
+    font-weight: bold;
+}
+
+.search-location {
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    min-width: 260px;
+    height: 100%;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.search-location-close-container{
+    border:1px solid #dddddd;
+    border-left: none;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    height: calc(100% + 2px);
+    display: flex;
+    align-items: center;
+    color: #dddddd;
+}
+.search-location-close-container mat-icon{
+    padding-left: 4px;
+    padding-right: 4px;
+
+}
+.search-location-close{
+    border-left: 1px solid #dddddd;
+    cursor: pointer;
+}
