--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
@@ -56,3 +56,18 @@ table tr:nth-child(even) td{
     border-radius: 20%;
     background-color: #f2f2f2;
 }
+
+.fire-type-radio-button-group{
+    margin-top: 13px !important;
+    flex-basis: auto !important;
+    width: auto !important;
+    
+    .radio-group {
+        margin-top: 10px;
+        display: flex;
+        
+        .radio-button {
+            margin-left: 5px;
+        }
+    }
+}
