--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -20,6 +20,7 @@
 
     &.smk-theme-wf .smk-toolbar {
         background-color: unset;
+        box-shadow: none;
 
         .smk-tool {
             background-color: white;
