--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -37,7 +37,7 @@
             (click)="onSelectLayer( 'wildfire-stage-of-control' )"
         >
             <wf-icon class="icon" iconName="local_fire_department" iconSize="small"></wf-icon>
-            <span class="hide">Incidents</span>
+            <span class="hide">Wildfires</span>
         </div>
 
         <div class="item"
