--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -383,6 +383,7 @@
 .popup-header {
   border-bottom: 1px solid #1a5a96;
   color: #1a5a96;
+  font-weight: 700;
   font-size: 14px;
   padding: 5px;
 }
@@ -433,13 +434,20 @@
   border: 2px solid #1e5d98;
   border-radius: 5px;
   color: #1e5d98;
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 14px;
   text-decoration: none;
   transition: 0.3s;
 }
 
 .popup-button:hover {
-  border: 2px solid #1e5d98;
+  border: 1px solid #1e5d98;
   background-color: #e0e0e0;
+}
+
+.smk-position {
+  white-space: nowrap;
+  display: inline-block;
+  font-weight: 700;
+  margin: 0 5px;
+  font-size: 14px;
 }
