h1 and menu updated to Wildfires Map

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -1,7 +1,7 @@
 <div class="top">
     <div class="header-row">
         <div class="title">
-            <h1>Active Wildfires Map</h1>
+            <h1>Wildfires Map</h1>
             <h2 class="wildfire-count">
                 <wf-icon class="fire-icon" iconName="local_fire_department" iconSize="small"></wf-icon>
                 <!-- <i class="material-icons-outlined">local_fire_department</i> -->
